hard-gists/8cebde204781b7d27c90/run.log
=== Docker Run Log for 8cebde204781b7d27c90 ===
Started at: Mi 29. Okt 18:11:23 CET 2025

[2025-10-29 18:11:24] START: Running container for 8cebde204781b7d27c90
[2025-10-29 18:11:24] SUCCESS: Container 578b0eb459d6ff877d4f52ebb0bd94f51e4b5129737a64f95b20925467459133 started for 8cebde204781b7d27c90
=== Container logs for 8cebde204781b7d27c90 ===
  File "/snippet.py", line 19
    print "Total loops: {}".format(loops)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8cebde204781b7d27c90 ===
[2025-10-29 18:11:26] INFO: Container 578b0eb459d6ff877d4f52ebb0bd94f51e4b5129737a64f95b20925467459133 has stopped
